--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "service-creator",
   "version": "0.1.3",
   "description": "A simple abstraction to create \"services\", plain objects that can be used to perform fetch calls in a convention over configuration fashion.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "license": "MIT",
   "author": "royriojas",
   "keywords": [
@@ -17,15 +15,24 @@
   "files": [
     "dist/**/*"
   ],
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "test": "TZ=UTC jest",
     "lint": "eslint --cache --cache-location=node_modules/.cache/ ./src/ --ext .ts,.tsx,.js",
-    "check:types": "tsc",
+    "check:types": "tsc --noEmit",
     "verify": "yarn lint && yarn check:types",
     "autofix": "yarn lint --fix",
-    "build": "npm run build:types && npm run build:js",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir dist --extensions \".ts,.tsx,.js\" --source-maps inline",
+    "build": "vite build",
     "changelog": "changelogx -f markdown -o ./changelog.md",
     "do-changelog": "npm run changelog && git add ./changelog.md && git commit -m 'DOC: Generate changelog' --no-verify",
     "install-hooks": "changelogx install-hook",
@@ -38,19 +45,11 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@babel/cli": "7.16.0",
-    "@babel/core": "7.16.0",
-    "@babel/plugin-transform-runtime": "7.16.0",
-    "@babel/preset-env": "7.16.4",
-    "@babel/preset-react": "7.16.7",
-    "@babel/preset-typescript": "7.16.0",
-    "@babel/register": "7.16.0",
     "@types/eslint": "^7.2.5",
     "@types/jest": "27.0.2",
     "@types/node": "17.0.14",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
-    "babel-jest": "27.4.6",
     "changelogx": "5.0.6",
     "eslint": "^7.14.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -65,10 +64,12 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "27.4.7",
     "prettier": "2.4.1",
-    "tslib": "2.7.0",
-    "typescript": "5.6.2"
+    "typescript": "5.6.2",
+    "vite": "5.2.10",
+    "vite-plugin-dts": "3.9.0",
+    "@vitejs/plugin-react-swc": "3.4.0"
   },
   "dependencies": {
-    "@babel/runtime": "7.16.3"
+    
   }
 }
