--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     }
   },
   "scripts": {
-    "test": "TZ=UTC jest",
+    "test": "TZ=UTC bun test",
     "lint": "eslint --cache --cache-location=node_modules/.cache/ ./src/ --ext .ts,.tsx,.js",
     "check:types": "tsc --noEmit",
     "verify": "yarn lint && yarn check:types",
@@ -45,6 +45,7 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@types/bun": "1.0.12",
     "@types/eslint": "^7.2.5",
     "@types/jest": "27.0.2",
     "@types/node": "17.0.14",
@@ -62,9 +63,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "27.4.7",
     "prettier": "2.4.1",
-    "typescript": "5.6.2",
+    "typescript": "5.7.2",
+    "tslib": "2.8.1",
     "vite": "5.2.10",
     "vite-plugin-dts": "3.9.0",
     "@vitejs/plugin-react-swc": "3.4.0"
