FEAT: add CI jobs

--- a/package.json
+++ b/package.json
@@ -30,19 +30,19 @@
     "test": "TZ=UTC bun test",
     "lint": "eslint --cache --cache-location=node_modules/.cache/ ./src/ --ext .ts,.tsx,.js",
     "check:types": "tsc --noEmit",
-    "verify": "yarn lint && yarn check:types",
-    "autofix": "yarn lint --fix",
+    "verify": "bun lint && bun check:types",
+    "autofix": "bun lint --fix",
     "build": "vite build",
     "changelog": "changelogx -f markdown -o ./changelog.md",
-    "do-changelog": "npm run changelog && git add ./changelog.md && git commit -m 'DOC: Generate changelog' --no-verify",
+    "do-changelog": "bun run changelog && git add ./changelog.md && git commit -m 'DOC: Generate changelog' --no-verify",
     "install-hooks": "changelogx install-hook",
-    "pre-v": "npm run verify",
-    "post-v": "npm run do-changelog && git push --no-verify && git push --tags --no-verify",
-    "bump-major": "npm run pre-v && npm version major -m 'BLD: Release v%s' && npm run post-v",
-    "bump-minor": "npm run pre-v && npm version minor -m 'BLD: Release v%s' && npm run post-v",
-    "bump-patch": "npm run pre-v && npm version patch -m 'BLD: Release v%s' && npm run post-v",
-    "bump-prerelease": "npm run pre-v && npm version prerelease -m 'BLD: Release v%s' && npm run post-v",
-    "prepublishOnly": "npm run build"
+    "pre-v": "bun run verify",
+    "post-v": "bun run do-changelog && git push --no-verify && git push --tags --no-verify",
+    "bump-major": "bun run pre-v && npm version major -m 'BLD: Release v%s' && npm run post-v",
+    "bump-minor": "bun run pre-v && npm version minor -m 'BLD: Release v%s' && npm run post-v",
+    "bump-patch": "bun run pre-v && npm version patch -m 'BLD: Release v%s' && npm run post-v",
+    "bump-prerelease": "bun run pre-v && npm version prerelease -m 'BLD: Release v%s' && npm run post-v",
+    "prepublishOnly": "bun run build"
   },
   "devDependencies": {
     "@types/bun": "1.0.12",
