--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "2.4.1",
-    "typescript": "5.7.2",
+    "typescript": "^5.9.3",
     "tslib": "2.8.1",
     "vite": "5.2.10",
     "vite-plugin-dts": "3.9.0",
