--- a/apps/docusaurus/package.json
+++ b/apps/docusaurus/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "website",
+  "name": "@service-creator/docs",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
+    "dev": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
+    "lint": "eslint --cache --cache-location=node_modules/.cache/ --no-error-on-unmatched-pattern './src/**/*.{ts,tsx,js,jsx}' './docusaurus.config.ts'",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc"
@@ -27,6 +29,11 @@
     "@docusaurus/module-type-aliases": "3.9.2",
     "@docusaurus/tsconfig": "3.9.2",
     "@docusaurus/types": "3.9.2",
+    "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.0",
+    "prettier": "^3.3.0",
     "typescript": "~5.6.2"
   },
   "browserslist": {
