--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["main", "master"]
     paths:
-      - "website/**"
+      - "apps/docusaurus/**"
       - ".github/workflows/deploy-docs.yml"
   workflow_dispatch:
 
@@ -31,16 +31,14 @@ jobs:
 
       - name: Install dependencies
         run: bun install
-        working-directory: website
 
-      - name: Build website
-        run: bun run build
-        working-directory: website
+      - name: Build docs
+        run: bunx turbo build --filter=@service-creator/docs
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: website/build
+          path: apps/docusaurus/build
 
   deploy:
     environment:
