--- a/package.json
+++ b/package.json
@@ -1,71 +1,16 @@
 {
-  "name": "service-creator",
-  "version": "0.3.0",
-  "description": "A simple abstraction to create \"services\", plain objects that can be used to perform fetch calls in a convention over configuration fashion.",
-  "license": "MIT",
-  "author": "royriojas",
-  "keywords": [
-    "create-service",
-    "create services",
-    "xhr",
-    "fetch",
-    "fetcher",
-    "service"
-  ],
-  "files": [
-    "dist/**/*"
-  ],
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "module": "./dist/index.js",
-  "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
+  "name": "create-service-monorepo",
+  "private": true,
+  "workspaces": ["packages/*", "apps/*"],
   "scripts": {
-    "test": "TZ=UTC bun test",
-    "lint": "eslint --cache --cache-location=node_modules/.cache/ ./src/ ./website --ext .ts,.tsx,.js",
-    "check:types": "tsc --noEmit",
-    "verify": "bun lint && bun check:types",
-    "autofix": "bun lint --fix",
-    "build": "vite build",
-    "changelog": "changelogx -f markdown -o ./changelog.md",
-    "do-changelog": "bun run changelog && git add ./changelog.md && git commit -m 'DOC: Generate changelog' --no-verify",
-    "install-hooks": "changelogx install-hook",
-    "pre-v": "bun run verify",
-    "post-v": "bun run do-changelog && git push --no-verify && git push --tags --no-verify",
-    "bump-major": "bun run pre-v && npm version major -m 'BLD: Release v%s' && npm run post-v",
-    "bump-minor": "bun run pre-v && npm version minor -m 'BLD: Release v%s' && npm run post-v",
-    "bump-patch": "bun run pre-v && npm version patch -m 'BLD: Release v%s' && npm run post-v",
-    "bump-prerelease": "bun run pre-v && npm version prerelease -m 'BLD: Release v%s' && npm run post-v",
-    "prepublishOnly": "bun run build"
+    "build": "turbo build",
+    "lint": "turbo lint",
+    "test": "turbo test",
+    "check:types": "turbo check:types",
+    "verify": "turbo lint check:types"
   },
   "devDependencies": {
-    "@types/bun": "1.0.12",
-    "@types/jest": "27.0.2",
-    "@types/node": "17.0.14",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "changelogx": "5.0.6",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jest": "^28.0.0",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-prettier": "^5.1.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.3.0",
-    "typescript": "^5.9.3",
-    "tslib": "2.8.1",
-    "vite": "5.2.10",
-    "vite-plugin-dts": "3.9.0",
-    "@vitejs/plugin-react-swc": "3.4.0"
+    "turbo": "^2.5.0"
   },
-  "dependencies": {}
+  "packageManager": "bun@1.3.8"
 }
