--- a/packages/create-service/package.json
+++ b/packages/create-service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "service-creator",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "A simple abstraction to create \"services\", plain objects that can be used to perform fetch calls in a convention over configuration fashion.",
   "license": "MIT",
   "author": "royriojas",
@@ -34,14 +34,14 @@
     "autofix": "bun lint --fix",
     "build": "vite build",
     "changelog": "changelogx -f markdown -o ./changelog.md",
-    "do-changelog": "bun run changelog && git add ./changelog.md && git commit -m 'DOC: Generate changelog' --no-verify",
+    "do-changelog": "bun run changelog && git add ./changelog.md ./package.json && git commit -m \"BLD: Release v$(node -p 'require(\"./package.json\").version')\" --no-verify",
     "install-hooks": "changelogx install-hook",
     "pre-v": "bun run verify",
-    "post-v": "bun run do-changelog && git push --no-verify && git push --tags --no-verify",
-    "bump-major": "bun run pre-v && npm version major --no-workspaces-update -m 'BLD: Release v%s' && npm run post-v",
-    "bump-minor": "bun run pre-v && npm version minor --no-workspaces-update -m 'BLD: Release v%s' && npm run post-v",
-    "bump-patch": "bun run pre-v && npm version patch --no-workspaces-update -m 'BLD: Release v%s' && npm run post-v",
-    "bump-prerelease": "bun run pre-v && npm version prerelease --no-workspaces-update -m 'BLD: Release v%s' && npm run post-v",
+    "post-v": "bun run do-changelog && git tag v$(node -p 'require(\"./package.json\").version') && git push --no-verify && git push --tags --no-verify",
+    "bump-major": "bun run pre-v && npm version major --no-workspaces-update --no-git-tag-version && bun run post-v",
+    "bump-minor": "bun run pre-v && npm version minor --no-workspaces-update --no-git-tag-version && bun run post-v",
+    "bump-patch": "bun run pre-v && npm version patch --no-workspaces-update --no-git-tag-version && bun run post-v",
+    "bump-prerelease": "bun run pre-v && npm version prerelease --no-workspaces-update --no-git-tag-version && bun run post-v",
     "prepublishOnly": "bun run build"
   },
   "devDependencies": {
